Login jump fix.

--- a/css/e-prawnik.biz/layout/navbar.scss
+++ b/css/e-prawnik.biz/layout/navbar.scss
@@ -284,7 +284,8 @@
   position: relative;
   bottom: -1px!important;
 }
-.body--glazed-nav-desktop #navbar .region-navigation-collapsible > #block-robco-main-menu > .menu-level-0 > .dropdown.has-child > a:hover > span{
+.body--glazed-nav-desktop #navbar .region-navigation-collapsible > #block-robco-main-menu > .menu-level-0 > .dropdown.has-child > a:hover > span,
+.body--glazed-nav-desktop #navbar .region-navigation-collapsible > #block-robco-account-menu > .menu--account > li:hover > a{
   position: relative;
   bottom: 0!important;
 }
